2010/0802
    Added optional support for PAM authentication. See userguide.

2010/08/01
    Added extra actual parameter because the dlr_find prototype
    in the Kannel sources has been changed.
    The smpp username (system-id) is relayed to bearerbox as
    billing information (msg->sms.account). This can be used in
    order to bill the reflected user.
    A legacy sqlbox patch is available that uses this information
    for pre-paid billing purposes.

2010/07/28
    Patch by Victor Luchitz to add tlv's to delivery reports.
    At the same time fixed format of submit data/done date in dlrs.

2010/07/27
    1. Fixed esm_class for deliver_sm's.
    2. fixed original submit date in dlr's.
    Patches by y Victor Luchitz

2010/07/25
    Changed references to smppbox to open smppbox in userguide.

2010/07/22
    Patch by Victor Luchitz for optional SMPP v3.4 tags used to
    indicate message_id and final message state in delivery reports.

2010/07/10
    Added documentation tree and building ("make docs").
    Patch by Victor Luchitz to configure ton/npi.

2010/07/08
    Patch by Victor Luchitz to support SMPP v3.4 tlv's.

2010/07/08
    Patch by Victor Luchitz committed to support "err: " text in reports.

2010/07/08
    Added support for per user-level ip-restrictions.

2010/06/16
    Added support for long messages being sent via de same SMSC (by re-assembling
    the message and sending it to bearerbox as a whole.
    Thanks to Tomasz Konopka for testing patiently.

2010/06/15
    Added HAVE_SHUTDOWN_CONNECTION #define, so we can use gwlib.a without
    patching.

2010/06/07
    First repository release of smppbox standalone.
    Some configuration options have been changed from the downloaded version:

    - bearerbox-port added which replaces the smsbox-port in group = core
    - bearerbox-host existed already but was not taken into account. It is now.
    - global-sender removed (was not used)